[package]
name = "lpcg"
version = "0.1.0"
edition = "2021"

[lib]
name = "lpcg"
path = "src/lib.rs"

[[bin]]
name = "lpcg-build"
path = "src/bin/build.rs"

[[bin]]
name = "lpcg-inspect"
path = "src/bin/inspect.rs"

[dependencies]
image = { version = "0.24.3", default-features = false, features = ["png"] }
walkdir = "2.3.2"
rand = "0.8.5"
structopt = "0.3.23"
