[package]
name = "lpcg"
version = "0.2.1"
edition = "2021"
authors = ["Bastien Sevajol <bastien@sevajol.fr>"]
description = "A lib to generate character spritesheets based on LPC"
homepage = "https://github.com/buxx/lpcg/"
documentation = "https://github.com/buxx/lpcg/"
repository = "https://github.com/buxx/lpcg/"
readme = "README.md"
license = " AGPL-3.0"
categories = ["game-development", "multimedia"]
keywords = ["gamedev", "spritesheet"]
exclude = [
    "spritesheets/*",
]

[lib]
name = "lpcg"
path = "src/lib.rs"

[[bin]]
name = "lpcg-build"
path = "src/bin/build.rs"

[[bin]]
name = "lpcg-inspect"
path = "src/bin/inspect.rs"

[dependencies]
image = { version = "0.24.3", default-features = false, features = ["png"] }
walkdir = "2.3.2"
rand = "0.8.5"
structopt = "0.3.23"
